-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.981 2011-04-26 21:32:09 jluis Exp $
-----------------------------------------------------------------------------------------

2011-04-26	remko
	* test/grdview/cuerpo.sh:	New test based on query by Eduardo Suarez.
	* gmt_grdio.c:		GMT_adjust_loose_wesn failed on grid with lon bounds both < 0.

2011-04-26	jluis
	* grdimage_func.c:	Replaced -d & -F by -A<file>=driver
	* gmt_gdalwrite.c:	New function to write files via GDAL (very little testing)
	* gmt_gdalread.h:	Add new struct to interface with GMT_gdalwrite
	* grdimage_func.c:	Add new (still undocumented) options -d & -F to allow saving
				images directly in raster formats via GDAL.
				
2011-04-26	pwessel
	* gmt_support.c:	All boundcond functions modified as old structs EDGEINFO and
				BCR are simplified into a few parameters in the GRDHEADER,
				eliminating overhead.
	* gmt_grdio.c:		Grid boundary conditions are applied immediately after the read
				stage, so all program reading grids will have correct boundary
				rows/cols already set.
				Now we use data BCs is at least one of the edges in a subset grid
				can be extended to include original data.
	* *.c:			All programs needing grid interpolation no longer have to explicitly
				parse, init, and set boundary conditions.

2011-04-25	remko
	* grdimage_func.c:	Add half a cell at edge when projecting pixel grid.
	* gmt_map.c:		When longitude spans 360 in Lambert projection, set is_world = TRUE.
	* gmt_grdio.c (GMT_grd_setregion):	Keep grid longitude range when map.is_world.		
	* gmt_grd.h:		Restrict GMT_is_subgrid to actual subgrids.
	* gmt.txt:		Added -n option.
	* explain_-n_full.txt:	Fixed typos, fixed wrong GMT_n_OPT
	* gmt_plot.c, gmt_support.c:	Removed GMT_grid_clip_*.

2011-04-25	jluis
	* gmt_map.c:		Removed GMT_grdproject_init in favor of GMT_project_init
				that takes as second input a GRD_HEADER pointer instead of