@@ -1,4 +1,4 @@
-#       $Id: Grdformats.txt,v 1.5 2011-03-15 02:06:35 guru Exp $
+#       $Id: Grdformats.txt,v 1.6 2011-04-26 21:32:39 remko Exp $
 #
 # To add new formats, read gmt_customio.c.  Entries must be
 # added in the right group and given unique 2-char code names.
@@ -45,5 +45,5 @@
  21 | af | Atlantic Geoscience Center format AGC (float)           |
  23 | ei | ESRI Arc/Info ASCII Grid Interchange format (integer)   |
  24 | ef | ESRI Arc/Info ASCII Grid Interchange format (float)     |
- 22 | gd | Import through GDAL (convert to float) -- NON-STANDARD  |
+ 22 | gd | Import through GDAL (convert to float)                  |
   - ----------------------------------------------------------------
