@@ -1,10 +1,11 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.981 2011-04-26 21:32:09 jluis Exp $
+	$Id: ChangeLog,v 1.982 2011-04-26 21:34:07 remko Exp $
 -----------------------------------------------------------------------------------------
 
 2011-04-26	remko
 	* test/grdview/cuerpo.sh:	New test based on query by Eduardo Suarez.
 	* gmt_grdio.c:		GMT_adjust_loose_wesn failed on grid with lon bounds both < 0.
+	* gmt_grdkeys.h:	Contains #define GMT_GRD_IS_??, automatically numbered.
 
 2011-04-26	jluis
 	* grdimage_func.c:	Replaced -d & -F by -A<file>=driver
